CB-15171 Handle scenarios to recover from bad states in stop / start scaling.   - New upscale and downscale states introduced to determine recovery candidates based on various criteria   - Dedicated CM API calls for stop / start scaling failure recovery is used to infer host health   - Additional messages are propagated to the activity console during recovery candidate identification   - Introduced entitlements for the feature
Testing
  - Unit tests added for StopStartUpscaleActions and StopStartDownscaleActions for newly introduced getRecoveryCandidatesAction
  - UTs added for handlers of newly introduced states, as well as existing handlers

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -108,12 +108,16 @@ cluster.certificates.rotation.failed=Rotations of the cluster's certificates hav
 cluster.manager.server.restarting=Restarting Cluster Manager Server
 cluster.services.restarting=Restarting Cluster services
 
-cluster.scaling.stopstart.upscale.init=Scaling up (via instance start) for host group: {0}. Starting {1} node(s)
+cluster.scaling.stopstart.upscale.init=Scaling up (via instance start) for host group: {0}.
+cluster.scaling.stopstart.upscale.identifyrecoverycandidates=Identifying upscale recovery candidates for host group: {0}
+cluster.scaling.stopstart.upscale.starting=Scaling up (via instance start) {0} instances for host group: {1}.
+cluster.scaling.stopstart.upscale.starting.identifiedrecoverycandidates=Scaling up (via instance start) {0} instances for host group: {1}. Identified {2} recovery candidate(s): [{3}]
 cluster.scaling.stopstart.upscale.nodes.started=Started Instances: count={0}, instanceId(s): [{1}]
+cluster.scaling.stopstart.upscale.nodes.started.withrecoverycandidates=Started Instances: count={0}, instanceId(s): [{1}], existing started instances: count={2}, instanceId(s): [{3}]
 cluster.scaling.stopstart.upscale.nodes.notstarted=Some instances did not reach the desired 'STARTED' state, and may need attention: count={0}, instanceId(s): [{1}]
 cluster.scaling.stopstart.upscale.inadequate.nodes=Could not find adequate nodes to upscale(start) in hostGroup: {0}. Additional nodes may need to be added to the cluster. DesiredCount={1}, UpscaleCount={2}
 cluster.scaling.stopstart.upscale.commissioning=Commissioning services. Host group: {0}, InstanceCount={1}, hostname(s): [{2}]
-cluster.scaling.stopstart.upscale.commissioning2=Commissioning services. Host group: {0}, startedInstanceCount={1}, hostname(s): [{2}] existingInstanceCount={3}, hostname(s): [{4}]
+cluster.scaling.stopstart.upscale.commissioning2=Commissioning services. Host group: {0}, startedInstanceCount={1}, hostname(s): [{2}] recoveryCandidatesCount={3}, hostname(s): [{4}]
 cluster.scaling.stopstart.upscale.couldnotcommission=Could not commission services on all nodes. Some nodes may need attention: instanceCount={0}, hostname(s): [{1}]
 cluster.scaling.stopstart.upscale.waiting.hoststart=Waiting for {0} cm-host(s) to start before commissioning services
 cluster.scaling.stopstart.upscale.cmhostsstarted={0} cm-host(s) started
@@ -123,7 +127,9 @@ cluster.scaling.stopstart.upscale.finished=Scaled up (via instance start) host g
 cluster.scaling.stopstart.upscale.failed=Failed to upscale (via instance start). Reason: {0}
 
 cluster.scaling.stopstart.downscale.init=Scaling down (via instance stop) for host group: {0}
+cluster.scaling.stopstart.downscale.identifyrecoverycandidates=Identifying downscale recovery candidates for host group: {0}
 cluster.scaling.stopstart.downscale.starting=Scaling down (via instance stop) {0} node(s) from host group: {1}. Decommissioning services on hosts: [{2}]
+cluster.scaling.stopstart.downscale.starting.identifiedrecoverycandidates=Scaling down (via instance stop) {0} node(s) from host group {1}. Decommissioning services on hosts: [{2}]. Identified {3} recovery candidates: [{4}]
 cluster.scaling.stopstart.downscale.couldnotdecommission=Could not decommission services on all nodes. Some nodes may need attention: instanceCount={0}, hostname(s): [{1}]
 cluster.scaling.stopstart.downscale.enteringcmmaintmode=Putting {0} cm-host(s) into maintenance mode
 cluster.scaling.stopstart.downscale.enteredcmmaintmode=Finished putting {0} cm-host(s) into maintenance mode
