--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -212,6 +212,8 @@ cluster.externaldatabase.upgrade.backup.data=Creating data backup, it might take
 cluster.externaldatabase.upgrade.dbserver=Upgrading database server.
 cluster.externaldatabase.upgrade.restore.data=Restoring data from the backup, it might take a while.
 cluster.externaldatabase.upgrade.start.services=Starting back Cloudera Manager and Runtime Services.
+cluster.externaldatabase.upgrade.install.pg=Installing Postgres {0} packages if necessary.
+cluster.externaldatabase.upgrade.install.pg.failed=Installing Postgres packages failed, please either install them manually or upgrade to an image containing Posgtres {0}, otherwise backup will stop working. Required packages: postgresql{0}-server, postgresql-jdbc, postgresql{0}, postgresql{0}-contrib, postgresql{0}-docs. Error message: {1}.
 cluster.externaldatabase.upgrade.finished=Upgrading database server finished.
 cluster.externaldatabase.upgrade.failed=Upgrading database server failed with error: {0}
 cluster.externaldatabase.upgrade.already.upgraded=Upgrading database server is not needed as it is already on the latest version ({0}).
