CB-18393 Add extra text to the event history item in case some data hubs are errored out

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -549,6 +549,7 @@ environment.upgrade.ccm.datahub.started=Upgrading CCM on Data Hub clusters start
 environment.upgrade.ccm.datahub.failed=Upgrading CCM on Data Hub clusters failed
 environment.upgrade.ccm.rollback=Rolling back CCM upgrade on last failed component
 environment.upgrade.ccm.finished=Upgrading CCM finished
+environment.upgrade.ccm.finished.witherrors=Upgrading CCM finished. {0}
 environment.upgrade.ccm.failed=Upgrading CCM failed
 
 environment.vertical.scale.validation.started=Validation for vertical scaling FreeIPA started
