CB-17578 Validate root volume has enough space for db backup
This commit moves the RDS upgrade into a flowchain and adds a validation frlow before it. The validation flow, in case of Azure, validates that the root volume has enough space for backing up the database. The validation is done via checking the free space of the root volume with df on the primary gateway, executing a psql command that summarises the size of the available databases and compares the two. The psql command execution is done via a new Salt state, hence the first flowstep in the validation flow is to redistribute the salt states. This redistribution is also required for the upgrade flow's backup and restore steps.

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -218,6 +218,10 @@ cluster.externaldatabase.upgrade.finished=Upgrading database server finished.
 cluster.externaldatabase.upgrade.failed=Upgrading database server failed with error: {0}
 cluster.externaldatabase.upgrade.already.upgraded=Upgrading database server is not needed as it is already on the latest version ({0}).
 cluster.externaldatabase.upgrade.not.available=Upgrading database server is not possible as stack is not available.
+cluster.externaldatabase.upgrade.validation.push.salt.states=Pushing Salt states.
+cluster.externaldatabase.upgrade.validation.backup.validation=Validating if there is enough free space for backup during database server upgrade.
+cluster.externaldatabase.upgrade.validation.finished=Database server upgrade validation finished.
+cluster.externaldatabase.upgrade.validation.failed=Database server upgrade validation failed.
 
 cluster.prepare.embeddeddatabase.upgrade.inprogress=Preparing embedded database upgrade (space validation on db disk, copying postgres binaries to the db disk).
 cluster.prepare.embeddeddatabase.upgrade.finished=Preparing embedded database upgrade finished.
