CB-18382 CB-18407 Postgres 11 upgrade in SDX: various bug fixes
The present commit introduces the following bug fixes:

1) when SDX runtime version was below 7.2.7, the upgrade was still triggered in core service. Now, the upgrade is rejected.
2) when an upgrade request in core returned error, it was not handled in SDX. Datalake service now throws an exception in that case, that in turn will cause the upgrade flow to fail.
3) after a successful upgrade the DB major versionwas not updated in SDX service. Now this is fixed, and tested that on the UI the upgrade database button is no longer visible once the upgrade succeeded. The fix was extending the redbeams databaseServerV4Response to StackDatabaseServerResponse with adding the conversion for the majorVersion.
4) there were two small change requests from team raven from a previous PR.
5) the data lake status message for a successful upgrade was misleading, it said: cluster created. It turned out, several flows are using this message by mistake. It is now fixed and postgres upgrade flow returns its own "Data Lake database server upgrade succeeded." message. A follow-up jira will be raised to fix the other flows in SDX.
6) both the data lake and distroX services returned a REST response OK 200 even if there was an error. Now, all errors are sent back as BadRequestExceptions

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -329,6 +329,7 @@ datalake.ccm.upgrade.inprogress=Data Lake upgrade to the latest Cluster Connecti
 datalake.database.server.upgrade.requested=Data Lake database server upgrade was requested.
 datalake.database.server.upgrade.failed=Data Lake database server upgrade failed.
 datalake.database.server.upgrade.inprogress=Data Lake database server upgrade is in progress.
+datalake.database.server.upgrade.succeeded=Data Lake database server upgrade succeeded.
 
 datahub.ccm.upgrade.error.environment.notlatest=Invalid state: environment {0} is not upgraded to the latest Cluster Connectivity Manager yet.
 datahub.ccm.upgrade.not.available=Data Hub is not in Available state for upgrade.
