CB-18020 adding non native aws support for vertical scaling

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -571,11 +571,11 @@ environment.upgrade.ccm.finished.witherrors=Upgrading CCM finished. {0}
 environment.upgrade.ccm.failed=Upgrading CCM failed
 
 environment.vertical.scale.validation.started=Validation for vertical scaling FreeIPA started
-environment.vertical.scale.validation.failed=Validation for vertical scaling FreeIPA failed
-environment.vertical.scale.freeipa.started=Vertical scaling FreeIPA started
-environment.vertical.scale.freeipa.failed=Vertical scaling FreeIPA failed
-environment.vertical.scale.finished=Vertical scaling FreeIPA finished
-environment.vertical.scale.failed=Vertical scaling FreeIPA was not successful please retry
+environment.vertical.scale.validation.failed=Validation for vertical scaling FreeIPA failed with {} error
+environment.vertical.scale.freeipa.started=Vertical scaling FreeIPA started to {0} instance type
+environment.vertical.scale.freeipa.failed=Vertical scaling FreeIPA failed to {0} instance type. The error was: {1}
+environment.vertical.scale.finished=Vertical scaling FreeIPA finished to {0} instance type
+environment.vertical.scale.failed=Vertical scaling FreeIPA was not successful to {0} instance type, please retry
 
 credential.azure.interactive.created=Azure interactive credential app successfully created
 credential.azure.interactive.failed=Azure interactive credential app creation failed
