CB-17561 We shall track also CREATE/DELETE/SUSPEND/RESUME use-cases in EDH

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -386,7 +386,7 @@ resource.sdx.deletionfinished=Finished deletion of datalake {0}.
 resource.sdx.deletionfailed=Failed to delete datalake {0}.
 resource.sdx.deletedonproviderside=Datalake cluster deleted on provider side.
 resource.sdx.envwait=Datalake cluster is waiting for the environment.
-resource.sdx.envfinished=Environment for datalake cluster has arrived.
+resource.sdx.envfinished=Environment for datalake has been created.
 resource.sdx.storage.consumption.collection.scheduling.started=Storage consumption collection scheduling started for datalake cluster.
 resource.sdx.storage.consumption.collection.unscheduling.started=Storage consumption collection unscheduling started for datalake cluster.
 resource.sdx.repair.started=Datalake repair flow started.
