CB-18452 change "Datalake cluster created." resource event to "Datalake cluster is running."

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -380,6 +380,7 @@ cluster.salt.passwordrotate.failed=SaltStack user password rotation failed with 
 resource.blueprint.created=Blueprint created.
 resource.blueprint.deleted=Blueprint deleted.
 resource.sdx.created=Datalake cluster created.
+resource.sdx.is.running=Datalake cluster is running.
 resource.sdx.deleted=Datalake cluster deleted.
 resource.sdx.deletionstarted=Started deletion of datalake {0}.
 resource.sdx.deletionfinished=Finished deletion of datalake {0}.
