CB-18513: Removing duplicate SDX event logging.

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -386,6 +386,7 @@ resource.sdx.deletionstarted=Started deletion of datalake {0}.
 resource.sdx.deletionfinished=Finished deletion of datalake {0}.
 resource.sdx.deletionfailed=Failed to delete datalake {0}.
 resource.sdx.deletedonproviderside=Datalake cluster deleted on provider side.
+resource.sdx.stack_deletion_in_progress=The deletion of datalake {0}'s stack is in progress. 
 resource.sdx.envwait=Datalake cluster is waiting for the environment.
 resource.sdx.envfinished=Environment for datalake cluster has arrived.
 resource.sdx.storage.consumption.collection.scheduling.started=Storage consumption collection scheduling started for datalake cluster.
@@ -396,7 +397,10 @@ resource.sdx.repair.failed=Datalake repair flow failed.
 resource.sdx.failed=Datalake cluster creation failed.
 resource.sdx.rdsdeletionstarted=Datalake RDS deletion started
 resource.sdx.rdsdeletionfailed=Datalake RDS deletion failed
+resource.sdx.requested=Datalake requested.
 resource.sdx.provisionstarted=Datalake cluster provision started.
+resource.sdx.stack_provision_in_progress=Datalake cluster stack provision in progress.
+resource.sdx.stack_provision_finished=Datalake cluster stack provision finished.
 resource.sdx.provisionfinished=Datalake cluster provision finished.
 resource.sdx.rdsdeletionfinished=Datalake RDS deletion finished.
 resource.sdx.rdscreationstarted=Datalake RDS creation started.
@@ -416,7 +420,7 @@ resource.sdx.stop.finished=Datalake stop finished.
 resource.sdx.stop.failed=Datalake stop failed.
 resource.sdx.detach.started=Datalake detach started. Original datalake renamed to {0}.
 resource.sdx.detach.finished=Datalake detach finished.
-resource.sdx.detach.deletion.failed=Deletion of detached datalake {0} failed. Please retry the failed step via the UI.
+resource.sdx.detach.deletion.failed=Deletion of detached datalake {0} failed. Please retry the failed step via the CDP CLI.
 resource.sdx.update_lb_dns.finished=Update of load balancer DNS for datalake finished.
 resource.sdx.update_lb_dns.failed=Update of load balancer DNS for datalake failed. Reason: {0}.
 resource.sdx.validation.skipped=Datalake object storage validation skipped. Reason: {0}.
