CB-14596 creating upgrade ccm error handling cases: ccm upgrade is creating a salt job which wait for a timeperiod, which redo the nginx config for the previous ccm config; this helps reestablish the connection with the machine even if the connection is lost during the ccm upgrade; the revert flow logic is waiting the same period of time in case of connection issues, but remove the salt job is the connection is in order

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -239,7 +239,9 @@ cluster.ccm.upgrade.reconfigure.nginx=Cluster Connectivity Manager upgrade recon
 cluster.ccm.upgrade.register.clusterproxy=Cluster Connectivity Manager upgrade re-register hosts.
 cluster.ccm.upgrade.health.check=Cluster Connectivity Manager health check.
 cluster.ccm.upgrade.remove.agent=Cluster Connectivity Manager remove previous version's agent.
+cluster.ccm.upgrade.remove.agent.failed=Cluster Connectivity Manager remove previous version's agent has been failed.
 cluster.ccm.upgrade.deregister.agent=Cluster Connectivity Manager unregister previous version's agent.
+cluster.ccm.upgrade.deregister.agent.failed=Cluster Connectivity Manager unregister previous version's agent has been failed.
 cluster.ccm.upgrade.failed=Cluster Connectivity Manager upgrade failed.
 cluster.ccm.upgrade.finished=Cluster Connectivity Manager upgrade finished.
 
