CB-18567 Enhance conclusion checker conclusion step logs and check cluster side nginx reachability

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -660,6 +660,7 @@ conclusion.salt.master.services.unhealthy=There are unhealthy services on master
 conclusion.salt.master.services.unhealthy.details=Unhealthy services on master: {0}
 conclusion.salt.minions.unreachable=Unreachable nodes: {0}. We detected that cluster members can't communicate with each other. Please validate if all cluster members are available and healthy on your cloud provider.
 conclusion.salt.minions.unreachable.details=Unreachable salt minions based on node status service: {0}
+conclusion.network.nginx.unreachable=Nginx is not reachable. The possible reasons are: CCM is not available or the network configuration is not CDP compatible. 
 conclusion.network.ccm.not.accessible=CCM is not accessible from node {0}. Please check network settings.
 conclusion.network.ccm.not.accessible.details=CCM health status is {0} for node {1}
 conclusion.network.cloudera.com.not.accessible=cloudera.com is not accessible from node: {0}. Please check network settings.
