CB-18559, CB-18557, CB-18558 - Backup backup content to cloud storage
This commit contains the following:

1, Using the optional env level 'backup location' for the backups to be
uploaded
 - this is relevant only in case of Azure
 - there is only at max 1 backup stored per cluster, it is overwritten
in case of a new backup is created
 - if 'backup lication' is empty then the backup is not dumped to object
store and it only resides on the root disk (until the disk chooser logic
gets implemented)

2, Stack status error message now contains the _actual_ stack status,
too, not just the info of not being available

3, Event history now contains info on the RDS upgrade target version (11), both for DH-s and DL-s.

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -214,10 +214,11 @@ cluster.externaldatabase.upgrade.restore.data=Restoring data from the backup, it
 cluster.externaldatabase.upgrade.start.services=Starting back Cloudera Manager and Runtime Services.
 cluster.externaldatabase.upgrade.install.pg=Installing Postgres {0} packages if necessary.
 cluster.externaldatabase.upgrade.install.pg.failed=Installing Postgres packages failed, please either install them manually or upgrade to an image containing Posgtres {0}, otherwise backup will stop working. Required packages: postgresql{0}-server, postgresql-jdbc, postgresql{0}, postgresql{0}-contrib, postgresql{0}-docs. Error message: {1}.
+cluster.externaldatabase.upgrade.started=Upgrading database server to version {0} started.
 cluster.externaldatabase.upgrade.finished=Upgrading database server finished.
 cluster.externaldatabase.upgrade.failed=Upgrading database server failed with error: {0}
 cluster.externaldatabase.upgrade.already.upgraded=Upgrading database server is not needed as it is already on the latest version ({0}).
-cluster.externaldatabase.upgrade.not.available=Upgrading database server is not possible as stack is not available.
+cluster.externaldatabase.upgrade.not.available=Upgrading database server is not possible as stack is not available, it is in {0} status.
 cluster.externaldatabase.upgrade.validation.push.salt.states=Updating the parameters for the orchestration engine.
 cluster.externaldatabase.upgrade.validation.backup.validation=Validating if there is enough free space for backup during database server upgrade.
 cluster.externaldatabase.upgrade.validation.finished=Database server upgrade validation finished.
@@ -330,7 +331,7 @@ datalake.ccm.upgrade.not.upgradeable=Data Lake is not upgradeable.
 datalake.ccm.upgrade.not.available=Data Lake is not in Available state for upgrade.
 datalake.ccm.upgrade.failed=Data Lake upgrade to the latest Cluster Connectivity Manager version failed.
 datalake.ccm.upgrade.inprogress=Data Lake upgrade to the latest Cluster Connectivity Manager is in progress.
-datalake.database.server.upgrade.requested=Data Lake database server upgrade was requested.
+datalake.database.server.upgrade.requested=Data Lake database server upgrade was requested to version {0}.
 datalake.database.server.upgrade.failed=Data Lake database server upgrade failed. Reason: {0}.
 datalake.database.server.upgrade.inprogress=Data Lake database server upgrade is in progress.
 datalake.database.server.upgrade.succeeded=Data Lake database server upgrade succeeded.
