CB-18699 adding vertical scale recommendation endpoint. This is a must have for the UI and also added some unit test to it. Refactored the current calculation to common module.

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -159,9 +159,9 @@ cluster.start.requested=Cluster start requested
 cluster.changing.credential=Changing cluster authentication
 cluster.changed.credential=Cluster authentication changed
 cluster.change.credentail.failed=Unable to change cluster manager password.
-cluster.changing.verticalscale=Vertical scaling the cluster
-cluster.changed.verticalscale=Vertical scaled the cluster
-cluster.change.verticalscale.failed=Unable to vertical scale the cluster.
+cluster.changing.verticalscale=Vertical scaling the {0} group to {1} instance type.
+cluster.changed.verticalscale=Vertical scaled the {0} group to {1} instance type.
+cluster.change.verticalscale.failed=Unable to vertical scale the current cluster because: {0}.
 cluster.start.failed=Cluster could not be started. Reason: {0}
 cluster.stop.failed=Cluster could not be stopped. Reason: {0}
 cluster.create.failed={0}
