--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -515,6 +515,7 @@ environment.xp.deletion.started=Experience deletion started
 environment.idbroker.mappings.deletion.started=IDBroker mappings deletion/deregistration started
 environment.s3guard.table.deletion.started=S3Guard table deletion/deregistration started
 environment.ums.resource.deletion.started=Environment assigned UMS resources deletion started
+environment.structured.event.cleanup.started=Environment related event cleanup started
 environment.datahubs.deletion.started=Data Hub clusters deletion/deregistration started
 environment.datalakes.deletion.started=Data Lake clusters deletion/deregistration started
 environment.resource.encryption.deletion.started=Resource Encryption deletion started
