CB-18792 Set ZOMBIE or ORCHESTRATION_FAILED instance statuses if CM call fails during upscale

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -141,7 +141,7 @@ cluster.scaling.stopstart.downscale.stop.failed=Failed while attempting to stop 
 cluster.scaling.stopstart.downscale.finished=Scaled down (via instance stop) host group: {0}. Instance details: count={1}, instance(s): {2}
 cluster.scaling.stopstart.downscale.failed=Failed to downscale (via instance stop). Reason: {0}
 
-cluster.scaling.upscale.zombie=Nodes with instance ID [{0}] became zombie during upscale, possible cause can be a failed/timed out Cloudera Manager operation, please check Cloudera Manager UI for further details or contact support.
+cluster.scaling.upscale.failed=Upscaling failed for nodes [{0}], possible cause can be a failed/timed out Cloudera Manager operation, please check Cloudera Manager UI for further details or contact support.
 
 cluster.scaling.up=Scaling up host group: {0}
 cluster.re.register.with.cluster.proxy=Re-registering with Cluster Proxy service
