CB-18480 Delete STOPPED nodes when a load-based autoscale policy is deleted  - CB API call is made from periscope to determine STOPPED hosts  - Messages are propagated to activity console indicating STOPPED host deletion  - Fixed duplicate occurrences of autoscalingConfigChanged messages sent to activity console
Testing
 - Unit tests for NodeDeletionService

--- a/autoscale-api/src/main/resources/messages/messages.properties
+++ b/autoscale-api/src/main/resources/messages/messages.properties
@@ -5,15 +5,18 @@ autoscale.config.not.found=''{0}'' Autoscale Configuration with identifier ''{1}
 autoscale.entitlement.not.enabled=Autoscaling Entitlement is not enabled for CloudPlatform ''{0}'', Cluster ''{1}''.
 autoscale.stopstart.entitlement.not.enabled=Instance Stop/Start scaling mechanism entitlement is not enabled for CloudPlatform ''{0}'', Cluster ''{1}''.
 autoscale.config.updated=''{0}'' Autoscaling Configuration updated; HostGroup(s) ''{1}''.
+autoscale.stopped.nodes.deleted=Deleting stopped node(s): {0} from host group ''{1}'' as part of ''LOAD-BASED'' Autoscale Policy deletion.
+autoscale.stopped.nodes.deleted.failed=Failed to delete stopped node(s): ''{0}''. {1}
 autoscale.disabled=Autoscaling has been disabled.
 autoscale.enabled=Autoscaling has been enabled.
+autoscale.alerts.deleted=All Autoscale policies deleted.
 
 autoscale.schedule.config.overlap=''SCHEDULE-BASED'' Autoscaling Configuration ''{0}'' not triggered, overlaps with ''{1}''.
 
 autoscale.cluster.exists.for.crn=Cluster exists for the same CRN ''{0}'' and CM Variant ''{1}''.
 autoscale.cluster.scaling.failed=''{0}'' Autoscaling could not be triggered. {1}
 autoscale.cluster.update.in.progress=''{0}'' Autoscaling could not be triggered; cluster update was in progress.
-autoscale.cluster.limit.exceeded=The maximum count of nodes for this cluster cannot be higher than ''{0}''. 
+autoscale.cluster.limit.exceeded=The maximum count of nodes for this cluster cannot be higher than ''{0}''.
 
 autoscale.activity.nodelimitexceeded=''{0}'' Autoscaling scale-up of ''{1}'' nodes exceeds maximum cluster size of ''{2}''. Scale-up will be triggered for ''{3}'' nodes.
 autoscale.activity.success=''{0}'' Autoscaling triggered for Host Group ''{1}'' from ''{2}'' to ''{3}''.
