CB-17882 Integrate EBS consumption into datahub (create & terminate)
* Add cloud-consumption-api as new compile dependency for core
  service.
* Integrate EBS consumption schedule / unschedule invocations into stack
  create & terminate flows.
  * Enabled for DH clusters with Kudu only.
  * New states: com.sequenceiq.cloudbreak.core.flow2.stack.provision.
    StackCreationState.
    ATTACHED_VOLUME_CONSUMPTION_COLLECTION_SCHEDULING_STATE,
    com.sequenceiq.cloudbreak.core.flow2.stack.termination.
    StackTerminationState.
    ATTACHED_VOLUME_CONSUMPTION_COLLECTION_UNSCHEDULING_STATE .
  * New handlers: com.sequenceiq.cloudbreak.reactor.handler.consumption.
    AttachedVolumeConsumptionCollectionSchedulingHandler,
    com.sequenceiq.cloudbreak.reactor.handler.consumption.
    AttachedVolumeConsumptionCollectionUnschedulingHandler .
  * Just like for its environment
    (https://jira.cloudera.com/browse/CB-17216 / #12807, property
    environment.consumption.enabled) and datalake
    (https://jira.cloudera.com/browse/CB-17217 / #12940, property
    datalake.consumption.enabled) counterparts, consumption schedule /
    unschedule invocations are guarded by two checks: application
    property in `application.yml` (cb.consumption.enabled) and
    entitlement (CDP_SAAS). The properties are disabled by default in
    all cases and are enabled separately in CBD
    (https://jira.cloudera.com/browse/CB-18965) and helm charts
    (https://jira.cloudera.com/browse/CB-18768 /
    https://jira.cloudera.com/browse/CB-18954).
* Some code cleanup.
* Testing:
  * Manual testing in local CB.
  * Added new UT and updated existing ones.

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -47,6 +47,8 @@ stack.datalake.update.finished=Update cluster finished
 stack.datalake.update.failed=Failed to update the cluster. {0}
 stack.infrastructure.create.rollback=Could not create {0} instance(s), node count is decreased on group {1}. Reason: {2}
 stack.cleanup.service.trigger.sync=Couldn't retrieve the cluster's status, starting to sync.
+stack.attached.volume.consumption.collection.scheduling.started=Attached volume consumption collection scheduling started for stack
+stack.attached.volume.consumption.collection.unscheduling.started=Attached volume consumption collection unscheduling started for stack
 
 stack.diagnostics.salt.validation.running=Validating salt minion connectivity before initializing diagnostics collection. Esxclude hosts: {0}
 stack.diagnostics.salt.validation.running.skip.unresponsive=Validating salt minion connectivity before initializing diagnostics collection (skip unresponsive hosts). Initially excluded hosts: {0}
@@ -396,8 +398,8 @@ resource.sdx.deletedonproviderside=Datalake cluster deleted on provider side.
 resource.sdx.stack_deletion_in_progress=The deletion of datalake {0}'s stack is in progress. 
 resource.sdx.envwait=Datalake cluster is waiting for the environment.
 resource.sdx.envfinished=Environment for datalake has been created.
-resource.sdx.storage.consumption.collection.scheduling.started=Storage consumption collection scheduling started for datalake cluster.
-resource.sdx.storage.consumption.collection.unscheduling.started=Storage consumption collection unscheduling started for datalake cluster.
+resource.sdx.storage.consumption.collection.scheduling.started=Cloud storage consumption collection scheduling started for datalake cluster.
+resource.sdx.storage.consumption.collection.unscheduling.started=Cloud storage consumption collection unscheduling started for datalake cluster.
 resource.sdx.repair.started=Datalake repair flow started.
 resource.sdx.repair.finished=Datalake repair flow finished.
 resource.sdx.repair.failed=Datalake repair flow failed.
@@ -490,8 +492,8 @@ environment.initialization.failed=Environment initialization failed
 environment.validation.started=Environment creation request validation started
 environment.validation.failed=Environment creation request validation failed
 environment.validation.skipped=Environment creation request validation skipped. Reason: {0}.
-environment.storage.consumption.collection.scheduling.started=Storage consumption collection scheduling started for environment
-environment.storage.consumption.collection.scheduling.failed=Storage consumption collection scheduling failed for environment
+environment.storage.consumption.collection.scheduling.started=Cloud storage consumption collection scheduling started for environment
+environment.storage.consumption.collection.scheduling.failed=Cloud storage consumption collection scheduling failed for environment
 environment.network.creation.started=Network creation/registration started for environment
 environment.network.creation.failed=Network creation/registration failed for environment
 environment.publickey.creation.started=Public Key creation/registration started for environment
@@ -508,7 +510,7 @@ environment.publickey.deletion.started=Public Key deletion/deregistration starte
 environment.clusterdefinition.deletion.started=Cluster definition deletion started
 environment.database.deletion.started=Database deletion/deregistration started
 environment.freeipa.deletion.started=FreeIPA deletion/deregistration started
-environment.storage.consumption.collection.unscheduling.started=Storage consumption collection unscheduling started
+environment.storage.consumption.collection.unscheduling.started=Cloud storage consumption collection unscheduling started
 environment.xp.deletion.started=Experience deletion started
 environment.idbroker.mappings.deletion.started=IDBroker mappings deletion/deregistration started
 environment.s3guard.table.deletion.started=S3Guard table deletion/deregistration started
