CB-18486 Modify proxy config on existing FreeIpa instances
Run salt update on the FreeIpa cluster, then apply a new salt state called 'modifyproxy' that will change the proxy configurations originally generated by user-data-helper.sh that is burned on the images.
The salt state is applied to instances in order by id, leaving the primary gateway last. After each state apply a health check is ran to ensure the instance is still reachable.

Some small improvements were also made:
1) FreeIpaService.getOperationStatus retry mechanism was introduced to improve stability (in testing some failed UMS calls failed the polling of the operation status, but the underlying operation finished successfully)
2) SaltJobIdTracker now also sets the job state to IN_PROGRESS when submitting a new job (not just when resubmitting a failed job). This was needed because the checkIsFinished may fail after the job submit (the node can not answer while the CCM services are restarted), and when the call() method is executed again, it will submit the job again.

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -584,6 +584,7 @@ environment.vertical.scale.finished=Vertical scaling FreeIPA finished to {0} ins
 environment.vertical.scale.failed=Vertical scaling FreeIPA was not successful to {0} instance type, please retry
 
 environment.proxy.modification.started=Proxy config modification started for environment
+environment.proxy.modification.freeipa.started=Proxy config modification started for FreeIPA instances
 environment.proxy.modification.failed=Proxy config modification failed for environment. Details: {0}
 environment.proxy.modification.finished=Proxy config modification finished for environment
 
