CB-19096 Validate if there is a custom parameter group attached
Problem: If a custom parameter group is attached to the AWS RDSInstance, the RDS upgrade will be failed.

Solution: Introduce a new validation step in the ValidateRdsUpgradeFlow: Validation on cloud provider side.
In this step we will check that a custom parameter group is attached to the RDS Instance and we will inform
the customer about it and RDS Upgrade won't be continued. This check is only needed on AWS.

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -229,6 +229,7 @@ cluster.externaldatabase.upgrade.already.upgraded=Upgrading database server is n
 cluster.externaldatabase.upgrade.not.available=Upgrading database server is not possible as stack is not available, it is in {0} status.
 cluster.externaldatabase.upgrade.validation.push.salt.states=Updating the parameters for the orchestration engine.
 cluster.externaldatabase.upgrade.validation.backup.validation=Validating if there is enough free space for backup during database server upgrade.
+cluster.externaldatabase.upgrade.validation.on.cloudprovider=Validating if the database server upgrade is possible on provider side.
 cluster.externaldatabase.upgrade.validation.finished=Database server upgrade validation finished.
 cluster.externaldatabase.upgrade.validation.failed=Database server upgrade validation failed. Reason: {0}.
 
