CB-19073 New SDX endpoint for initiating Salt update
This commit adds a new endpoint to the SDX API that initiates Salt Update on a Datalake. The endpoint starts a newly added Salt update flow that first calls the StackV4 API's Salt update endpoint then as a second step polls the flow in core and waits for it to finish. The polling duration is set to 2 hours that should be enough for the Salt update in core to finish.

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -632,6 +632,10 @@ datalake.salt.passwordrotation.in.progress=Datalake SaltStack user password rota
 datalake.salt.passwordrotation.failed=Datalake SaltStack user password rotation failed. Reason: {0}
 datalake.salt.passwordrotation.finished=Datalake SaltStack user password rotation finished
 
+datalake.salt.update.in.progress=Datalake SaltStack update in progress
+datalake.salt.update.failed=Datalake SaltStack update failed. Reason: {0}
+datalake.salt.update.finished=Datalake SaltStack update finished
+
 environment.stack.config.updates.started=Environment configuration update of clusters started.
 environment.stack.config.updates.finished=Environment configuration update of clusters finished.
 environment.stack.config.updates.failed=Environment configuration update of clusters failed due to the following reason: {0}  
