--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -1,5 +1,6 @@
 test.message=Hi my dear friend
 stack.image.setup=Setting up CDP image
+stack.image.fallback=Could not start cluster with Azure Marketplace image. Now attempting to fall back to VHD image
 stack.infrastructure.bootstrap=Bootstrapping cluster
 stack.infrastructure.disk.mount=Mounting attached disks
 stack.infrastructure.starting=Infrastructure is now starting
