--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -591,11 +591,11 @@ environment.vertical.scale.freeipa.failed=Vertical scaling FreeIPA failed to {0}
 environment.vertical.scale.finished=Vertical scaling FreeIPA finished to {0} instance type
 environment.vertical.scale.failed=Vertical scaling FreeIPA was not successful to {0} instance type, please retry
 
-environment.proxy.modification.started=Proxy config modification started for environment
+environment.proxy.modification.started=Proxy config modification to {0} started for Environment
 environment.proxy.modification.freeipa.started=Proxy config modification started for FreeIPA instances
 environment.proxy.modification.datalake.started=Proxy config modification started for DataLake instances
-environment.proxy.modification.failed=Proxy config modification failed for environment. Details: {0}
-environment.proxy.modification.finished=Proxy config modification finished for environment
+environment.proxy.modification.failed=Proxy config modification to {0} failed for Environment. Details: {1}
+environment.proxy.modification.finished=Proxy config modification finished for Environment
 
 credential.azure.interactive.created=Azure interactive credential app successfully created
 credential.azure.interactive.failed=Azure interactive credential app creation failed
