CB-18485 Modify proxy config of DataHubs

--- a/common/src/main/resources/messages/messages.properties
+++ b/common/src/main/resources/messages/messages.properties
@@ -594,6 +594,7 @@ environment.vertical.scale.failed=Vertical scaling FreeIPA was not successful to
 environment.proxy.modification.started=Proxy config modification to {0} started for Environment
 environment.proxy.modification.freeipa.started=Proxy config modification started for FreeIPA instances
 environment.proxy.modification.datalake.started=Proxy config modification started for DataLake instances
+environment.proxy.modification.datahubs.started=Proxy config modification started for all attached DataHubs
 environment.proxy.modification.failed=Proxy config modification to {0} failed for Environment. Details: {1}
 environment.proxy.modification.finished=Proxy config modification finished for Environment
 
